--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,26 +1,24 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "ES2020",
-        "lib": [
-            "ES2020"
-        ],
-        "types": [
-            "node"
-        ],
-        "outDir": "../extension",
-        "sourceMap": true,
-        "strict": true,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "noUnusedParameters": true,
-        "noUnusedLocals": true,
-        "esModuleInterop": true,
-    },
-    "include": [
-        "**/*",
-    ],
-    "exclude": [
-        "**/*.test.ts"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "ES2020",
+    "lib": ["ES2020"],
+    "types": ["node"],
+    "outDir": "../extension",
+    "sourceMap": true,
+    "strict": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "esModuleInterop": true,
+    "allowJs": true,
+    "resolveJsonModule": true
+  },
+  "include": [
+    "**/*"
+  ],
+  "exclude": [
+    "**/*.test.ts"
+  ]
 }
