--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "xcss",
-  "displayName": "XCSS Server",
+  "displayName": "XCSS Client",
   "description": "Extension bundle for XCSS",
   "version": "0.1.0",
   "publisher": "yshell-dev",
   "author": {
     "name": "Vyshnav Prasad",
-    "email": "i@yshell.dev",
+    "email": "official@yshell.dev",
     "url": "http://yshell.dev"
   },
   "galleryBanner": {
@@ -73,14 +73,12 @@
     "vscode": "^1.51.0"
   },
   "scripts": {
-    "init": "npm install && npm install -g @vscode/vsce",
     "lint": "eslint ./typescript --ext .ts",
-    "test": "jest --coverage",
-    "lintest": "npm run lint && npm run test && tsc --build ./typescript",
-    "es:compile": "node build.js",
-    "ts:compile": "tsc -p ./typescript",
-    "dev:package": "npm run init && npm run es:compile && npm install --omit=dev && vsce package && npm ci",
-    "dev:publish": "vsce publish"
+    "tsbuild": "tsc -p ./typescript",
+    "esbuild": "node build.js",
+    "install": "npm install && npm install -g @vscode/vsce",
+    "package": "npm run install && npm run es:compile && npm install --omit=dev && vsce package && npm ci",
+    "publish": "vsce publish"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
