--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: '18'
 
+      - run: git submodule update --init ./core
       - run: npm run package
       - run: npm run pubish
 
