--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -1,10 +1,10 @@
 name: Publish VSCode Extension
 
 on:
-  push:
-    tags:
-      - 'v*'
   workflow_dispatch:
+  # push:
+  #   tags:
+  #     - 'v*'
 
 jobs:
   publish:
@@ -18,7 +18,6 @@ jobs:
           node-version: '18'
 
       - run: git submodule update --init ./core
-      - run: npm run package
       - run: npm run pubish
 
       - name: Publish VSCode Extension
