--- a/package.json
+++ b/package.json
@@ -74,10 +74,10 @@
   },
   "scripts": {
     "lint": "eslint ./typescript --ext .ts",
+    "init": "npm install -g typescript @vscode/vsce && npm install",
     "tsbuild": "npx tsc -p ./typescript",
     "esbuild": "node build.js",
-    "install": "npm install -g typescript @vscode/vsce",
-    "package": "npm run install && npm run tsbuild && npm install --omit=dev && vsce package && npm ci",
+    "package": "npm run init && npm run tsbuild && npm install --omit=dev && vsce package && npm ci",
     "publish": "npm run package && vsce publish"
   },
   "devDependencies": {
