--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "init": "npm install -g typescript @vscode/vsce && npm install",
     "tsbuild": "npx tsc -p ./typescript",
     "esbuild": "node build.js",
-    "package": "npm run init && npm run tsbuild && npm install --omit=dev && vsce package && npm ci",
+    "package": "npm run init && npm run tsbuild && npm install --omit=dev && vsce package",
     "publish": "npm run package && vsce publish"
   },
   "devDependencies": {
