--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -19,10 +19,4 @@ jobs:
 
       - run: git submodule update --init ./core
       - run: npm run package
-
-      - name: Publish VSCode Extension
-        uses: lannonbr/vsce-action@4.0.0
-        with:
-          args: publish -p ${{ secrets.VSCE_TOKEN }}
-        env:
-          VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
+      - run: vsce publish --pat ${{ secrets.VSCE_TOKEN }} --tag beta
