--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -3,8 +3,8 @@ name: Publish VSCode Extension
 on:
   workflow_dispatch:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
 
 jobs:
   publish:
@@ -19,4 +19,4 @@ jobs:
 
       - run: git submodule update --init ./core
       - run: npm run package
-      - run: vsce publish --pat ${{ secrets.VSCE_TOKEN }} --pre-release
+      - run: vsce publish --pat ${{ secrets.VSCE_TOKEN }}
