--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -1,11 +1,10 @@
-name: Publish VSCode Extension
+name: Publish VSCode
 
 on:
   workflow_dispatch:
   push:
     branches:
       - main
-
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -19,4 +18,10 @@ jobs:
 
       - run: git submodule update --init ./core
       - run: npm run package
-      - run: vsce publish --pat ${{ secrets.VSCE_TOKEN }}
+
+      - name: Publish VSCode Extension
+        uses: lannonbr/vsce-action@4.0.0
+        with:
+          args: publish -p ${{ secrets.VSCE_TOKEN }}
+        env:
+          VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
