--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -18,6 +18,7 @@ jobs:
 
       - run: git submodule update --init ./core
       - run: npm run package
+      - run: vsce publish 
 
       - name: Publish VSCode Extension
         uses: lannonbr/vsce-action@4.0.0
