--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
   "type": "commonjs",
   "main": "./extension/activate.js",
   "activationEvents": [
-    "onStartupFinished",
-    "onLanguage:*"
+    "onStartupFinished"
   ],
   "contributes": {
     "configuration": {
