--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "publisher": "yshell-dev",
   "author": {
-    "name": "Vyshnav Prasad",
+    "name": "Yshell.dev",
     "email": "official@yshell.dev",
     "url": "http://yshell.dev"
   },
