--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "xcss",
   "displayName": "XCSS Client",
   "description": "Extension bundle for XCSS",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publisher": "yshell-dev",
   "author": {
-    "name": "Yshell.dev",
+    "name": "Vyshnav Prasad",
     "email": "official@yshell.dev",
     "url": "http://yshell.dev"
   },
@@ -55,7 +55,8 @@
     "init": "npm install -g typescript @vscode/vsce && npm install",
     "tsbuild": "npx tsc -p ./typescript",
     "esbuild": "node build.js",
-    "package": "npm run init && npm run tsbuild && npm install --omit=dev && vsce package"
+    "package": "npm run init && npm run tsbuild && npm install --omit=dev && vsce package",
+    "publish": "npm run package && vsce publish"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
