--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,19 +7,10 @@
 			"request": "launch",
 			"runtimeExecutable": "${execPath}",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
-			]
-		},
-		{
-			"name": "Extension Tests",
-			"type": "extensionHost",
-			"request": "launch",
-			"runtimeExecutable": "${execPath}",
-			"args": [
 				"--log-level",
 				"trace",
-				"--extensionDevelopmentPath=${workspaceFolder}",
-				"--extensionTestsPath=${workspaceFolder}/extension/test/suite/index"
+				"--extensionDevelopmentPath",
+				"${workspaceFolder}"
 			],
 			"outFiles": [
 				"${workspaceFolder}/extension/**/*.js"
