--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -2,7 +2,7 @@ name: Publish VSCode
 
 on:
   workflow_dispatch:
-    
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -12,13 +12,13 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: '22'
+          node-version: "22"
 
       - run: git submodule update --init ./core
 
       - run: npm run package
 
-      # 
+      #
       - name: Get version from package.json
         id: artifact
         run: |
@@ -31,7 +31,7 @@ jobs:
           echo "artifact_name=${{ steps.artifact.outputs.pacname }}-vsce_${{ steps.artifact.outputs.version }}.vsix" >> $GITHUB_OUTPUT
 
       - name: Upload artifact for release
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.artifact.outputs.artifact_name }}
           path: ${{ steps.artifact.outputs.artifact_name }}
@@ -45,10 +45,10 @@ jobs:
           files: ${{ steps.prepare_artifact.outputs.artifact_name }}
           overwrite_files: true
           token: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Publish release (latest tag)
         uses: softprops/action-gh-release@v2
-        with:  
+        with:
           tag_name: latest
           name: Release latest
           body_path: ./release.md
@@ -62,5 +62,3 @@ jobs:
           args: publish -p ${{ secrets.VSCE_TOKEN }}
         env:
           VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
-
-  
