--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Prepare artifact name
         id: vsix_name
         run: |
-          echo "packaged_vsix=${pacname}-v${version}.vsix" >> $GITHUB_ENV
+          echo "packaged_vsix=${pacname}-${version}.vsix" >> $GITHUB_ENV
           echo "artifact_vsix=${pacname}-vsce_${version}.vsix" >> $GITHUB_ENV
 
       - name: Upload artifact for release
