--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -5,8 +5,8 @@
         "lib": [
             "ES2020"
         ],
-        "types": [
-            "node"
+        "typeRoots": [
+            "./node_modules/@types"
         ],
         "outDir": "../extension",
         "sourceMap": true,
