--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -5,6 +5,9 @@
         "lib": [
             "ES2020"
         ],
+        "types": [
+            "node"
+        ],
         "typeRoots": [
             "./node_modules/@types"
         ],
