--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -27,13 +27,13 @@ jobs:
           version=$(jq -r .version package.json)
           echo "pacname=$pacname" >> $GITHUB_ENV
           echo "version=$version" >> $GITHUB_ENV
-          
+
       - name: Prepare artifact name
         id: vsix_name
         run: |
           pacname=${{ env.pacname }}  # If pacname was set in previous step to env, else define here
           version=${{ env.version }}  # Same for version
-          latest_vsix="${pacname}-vsce_v${version}.vsix"
+          latest_vsix="${pacname}-vsce_latest.vsix"
           version_vsix="${pacname}-vsce_v${version}.vsix"
           packaged_vsix="${pacname}-${version}.vsix"
 
