--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -6,7 +6,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  publish:
+  releases:
+    name: Repository Release
     runs-on: ubuntu-latest
 
     steps:
@@ -66,6 +67,11 @@ jobs:
           overwrite_files: true
           token: ${{ secrets.GITHUB_TOKEN }}
 
+  publish:
+    name: Publish on VS Code Marketplace
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Publish VSCode Extension
         uses: lannonbr/vsce-action@4.0.0
         with:
