--- a/.github/workflows/vsce-release.yml
+++ b/.github/workflows/vsce-release.yml
@@ -67,11 +67,12 @@ jobs:
           files: latest/**
           overwrite_files: true
           token: ${{ secrets.GITHUB_TOKEN }}
-
+          
   vsce-publish:
     needs: github-release
     name: Publish on VS Code Marketplace
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     steps:
       - uses: actions/checkout@v3
