--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "name": "Yshell.dev",
     "email": "official@yshell.dev"
   },
-  "homepage": "https://yshell.dev/projects/xcss-vscode",
+  "homepage": "https://www.xcss.io/",
   "repository": {
     "type": "git",
     "url": "https://github.com/yshell-dev/xcss-vscode"
