--- a/package.json
+++ b/package.json
@@ -211,7 +211,7 @@
     "package-lock.json",
     "package.json",
     "README.md",
-    "release.md",
+    "RELEASE.md",
     "tsconfig.build.json"
   ]
 }
