--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint ./typescript --ext .ts",
     "init": "npm install -g typescript @vscode/vsce && npm install",
     "tsbuild": "npx tsc -p ./typescript",
-    "package": "npm run init && npm run tsbuild && npm install --omit=dev && vsce package"
+    "package": "npm run init && npm run tsbuild && npm install --omit=dev && vsce package && npm install"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
